# zephyr

samples/subsys/shell/shell_module/: sample.yaml
samples/subsys/shell/shell_module/pytest/: test_shell.py
samples/subsys/testsuite/pytest/: testcase.yaml
samples/subsys/testsuite/pytest/shell/: testcase.yaml
scripts/: requirements-run-test.txt
scripts/pylib/pytest-device-adapter/: .gitignore  README.rst  tox.ini
scripts/pylib/pytest-device-adapter/src/device_adapter/: log.py  plugin.py
scripts/pylib/pytest-twister-ext/: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
scripts/pylib/pytest-twister-ext/src/twister_ext/: exceptions.py  helper.py  log.py  plugin.py  twister_ext_config.py
scripts/pylib/pytest-twister-ext/src/twister_ext/device/: device_abstract.py  factory.py  hardware_adapter.py  qemu_adapter.py  simulator_adapter.py
scripts/pylib/pytest-twister-ext/src/twister_ext/fixtures/: dut.py
scripts/pylib/pytest-twister-ext/src/twister_ext/log_files/: log_file.py
scripts/pylib/pytest-twister-ext/tests/: conftest.py  hardware_adapter_test.py
scripts/pylib/pytest-twister-ext/tests/device/: hardware_adapter_test.py  qemu_adapter_test.py  simulator_adapter_test.py
scripts/pylib/pytest-twister-ext/tests/log_file/: log_file_test.py
scripts/pylib/pytest-twister-harness/: .pre-commit-config.yaml  README.rst  setup.cfg  tox.ini
scripts/pylib/pytest-twister-harness/src/twister_harness/: plugin.py  twister_harness_config.py
scripts/pylib/twister/twisterlib/: handlers.py  harness.py  runner.py  testinstance.py
(+10 files in other folders)
